Bug #1248 - Mobile iOS: text overflows boxes on Group Docs

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1219,8 +1219,14 @@ body{
 .doctable-panel{
     padding-bottom: 12px;
     .doctable{
-        .edited-date-cell{
-            width: 20%;
+        td{
+            width: 12%;
+            &.edited-date-cell{
+                width: 20%;
+            }
+            &.tags-cell{
+                width: auto;
+            }
         }
     }
 }
